added : update style to have the main container in center.

--- a/src/main/webapp/styles/styles.css
+++ b/src/main/webapp/styles/styles.css
@@ -76,6 +76,7 @@ h1 {
 }
 .container--parts {
   display: flex;
+  justify-content: center;
 }
 .container--right {
   background-image: url(https://www.wafasalaf.ma/themes/wafasalaf/assets/img/recap-background.png);
