--- a/src/main/webapp/styles/styles.css
+++ b/src/main/webapp/styles/styles.css
@@ -386,4 +386,9 @@ h1 {
   font-size: 12px;
 }
 
+.small-sweetalert {
+  width: 250px !important;
+  font-size: 14px !important;
+}
+
 /*# sourceMappingURL=styles.css.map */
